fix close area (initial div is too small to close it by clicking elswere below crumbs)

--- a/src/aura/brSearchModal/brSearchModal.css
+++ b/src/aura/brSearchModal/brSearchModal.css
@@ -14,3 +14,7 @@
 	-webkit-transition: opacity 0.5s;
 	transition: opacity 0.5s;
 }
+
+.THIS .modal__inner {
+    height: 100%;
+}
